syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartparking.grpc";
option java_outer_classname = "ParkingSystemServiceImpl";
package ParkingSystem;


service ParkingManaged {

  //Abertura de caixa do estacionamento no dia
  rpc ParkingOpen(Empety) returns (Status) { }

  //Entrada do veiculo -> gera um ticket (Dispara para o serviço VancancyManagement)
  rpc carCheckIn(CarEntrance) returns (Ticket) {  }

  //Saida do veiculo -> Pode ser negada se pagamento não tiver sido efetuado (dispara para o serviço VancancyManagement)
  rpc CarCheckOut(TicketRequestCheckout) returns (Ticket) {  }

  //Verificar se esta cheio no serviço VancancyManagement
  rpc CheckIfItIsFull(Empety) returns (Status) {}

  //Fechamento do caixa do estacionamento no dia
  rpc ParkingClosure(Empety) returns (FinanceDay) { }

  //Relatorio de entrada e saida de veiculo
  rpc report(Empety) returns (FinanceDay) { }

}

message Empety{
}

message Parking{
  string vancancyQuantity = 1;
  string openingCashValue = 2;
}

message FinanceDay{
  string CarQuantity = 1;
  string amount = 2;
  string msgErro = 3;
}



message CarEntrance{
  string licensePlate = 1;
}

message TicketRequestCheckout{
  string idTicket = 1;
}


message Ticket{
  string idTicket = 1;
  string licensePlate = 2;
  string checkin = 3;
  string checkout = 4;
  string price = 5;
  string msgErro = 6;
}

message Status{
  string status = 1;
}